--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h1>Gnana Koushik</h1>
         <p class="description">
-            Gnana Koushik (Sokuladi) is a boy from our college who became my best friend. He is so good at heart, understands everyone well, studies well, and is down to earth. He is not only smart but also good looking but won't admit that. He just need time tease me and I just need an embarassing topic about him to shut his mouth. Can ignore people well but fails to escape from some people sometimes. I really want to write a book that tells about you. Hope will do that some day. My favourite person and lots of love to you Koushikkuuuuuuuu... (Navvaku chala kashtapadda deenikosam...hehe) 
+            Gnana Koushik (Sokuladi) is a boy from our college who became my best friend. He is so good at heart, understands everyone well, studies well, and is down to earth. He is not only smart but also good looking but won't admit that. You are an amazing person from inside and outside. He just need time tease me and I just need an embarassing topic about him to shut his mouth. Can ignore people well but fails to escape from some people sometimes. I really want to write a book that tells about you. Hope will do that some day. My favourite person and lots of love to you Koushikkuuuuuuuu... (Navvaku chala kashtapadda deenikosam...hehe) 
         </p>
     </div>
 </body>
