--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <img src="
+  <img src="https://github.com/user-attachments/assets/8e4d33bf-af67-4d6b-b28d-425866e31b5b" alt="Koushik">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gnana Koushik</title>
