--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <img src="" alt="Koushik">
+  <img src="https://github.com/user-attachments/assets/0d033400-0068-447a-b420-5138072c10a4" alt="Koushik">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gnana Koushik</title>
